force-app/main/default/objects/Class_Assessment_Content__c/Class_Assessment_Content__c.object-meta.xml
<CustomObject>
    <label>Class Assessment Content</label>
    <nameField>
        <displayFormat>CAC-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Assessment Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>