force-app/main/default/objects/Class_Assessment_Content__c/fields/Class_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Class_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Assessment</label>
    <referenceTo>Class_Assessment__c</referenceTo>
    <relationshipLabel>Class Assessment Contents</relationshipLabel>
    <relationshipName>Class_Assessment_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>