force-app/main/default/objects/Class_Assessment_Content__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <formula>Module_Lesson__r.Module__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module</label>
    <type>Text</type>
</CustomField>