force-app/main/default/objects/Class_Assessment_Content__c/fields/Module_Lesson__c.field-meta.xml
<CustomField>
    <fullName>Module_Lesson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Module Lesson</label>
    <referenceTo>Module_Lesson__c</referenceTo>
    <relationshipLabel>Class Assessment Contents</relationshipLabel>
    <relationshipName>Class_Assessment_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>